# llm-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  run_coverage.py  start_celery.sh  test_celery.sh  test_coverage.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml  docker.yml  quality.yml
src/autoreply/: apps.py  data_train.json  models.py  tasks.py  training_input.txt  training_input2.txt  urls.py
src/autoreply/llm/: classify.py  fine_tune.py
src/autoreply/management/commands/: stop_gmail_watch.py
src/autoreply/services/: gmail.py
src/autoreply/tests/: test_llm.py  test_models.py  test_services.py  test_tasks.py  test_views.py  test_views_classify.py  test_views_finetune.py
src/autoreply/views/: views.py  views_classify.py  views_finetune.py
src/config/: __init__.py  celery_app.py  models.py  router.py  settings.py  settings_celery.py  urls.py  views.py
src/swagger/: urls.py  views.py
src/templates/swagger/: docs.html  login.html
